--- a/support.css
+++ b/support.css
@@ -25,7 +25,8 @@
   .menu {
     width: 100%;
     margin-right: 0;
-    border-radius: 0;
+    border-radius: 15;
+    padding: 10
   }
 }
 .menu-title {
